# animation

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  TODO  xmake.lua
cmake/: setup.cmake
resources/: level1.tmx
src/: game.cpp  game.mpp  knight.mpp  main.cpp
src/core/: animation.cpp  animation.mpp  assetmanager.cpp  assetmanager.mpp  components.cpp  components.mpp  game.cpp  map_layer.cpp  physics.cpp  physics.mpp  physics_debug_draw.cpp  physics_debug_draw.mpp  render.cpp  render.mpp  say.cpp  say.mpp  systemapi.cpp  tilemap.cpp  tilemap.mpp  utils.cpp
src/ext/: box2d.cpp  box2d.mpp  ginseng.cpp  sfml.cpp  sfml.mpp
src/game/: debug_controls.cpp  input_manager.cpp  knight.cpp  level.cpp  terrain.cpp
test/: tilemap_test.cpp
withheaders/include/core/: animation.hpp
withheaders/src/core/: animation.cpp
